--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=demo
+spring.datasource.url=jdbc:mysql://localhost:3306/health_center?useSSL=false&serverTimezone=UTC
+spring.datasource.username=health_center
+spring.datasource.password=health_center
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.thymeleaf.cache=false
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
